--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <title>Hello, World! • A-Frame</title>
         <meta name="description" content="Hello, World! • A-Frame">
-        <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
     </head>
     <body style="margin: 50px;">
         <a href="webvr-tests/vrdevice/">VRDevice - plain</a><br/>
@@ -15,5 +14,6 @@
         <a href="events_js.html">Basic Box - mouse events via JS - aframe</a><br/>
         <a href="360_pano.html">360 Panorama - aframe</a><br/>
         <a href="model.html">Load an show a model - aframe</a><br/>
+        <a href="complex_animation.html">Advanced - aframe</a><br/>
     </body>
 </html>
