--- a/360_pano.html
+++ b/360_pano.html
@@ -4,17 +4,10 @@
     <meta charset="utf-8">
     <title>Hello, World! • A-Frame</title>
     <meta name="description" content="Hello, World! • A-Frame">
-    <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
-    <script src="https://rawgit.com/ngokevin/aframe-text-component/master/dist/aframe-text-component.min.js"></script>
+    <script src="aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
-
-        <a-entity text="text: Real"
-                material="color: #66E1B4"
-                position="0 0 -5"
-                id="mybox"></a-entity>
-
         <a-camera position="0 0 0">
             <a-cursor color="#0000ff">
         </a-camera>
