--- a/basic_box.html
+++ b/basic_box.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hello, World!</title>
-    <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
+    <script src="aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
