--- a/events_nonjs.html
+++ b/events_nonjs.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hello, World!</title>
     <meta name="description" content="Hello, World!">
-    <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
+    <script src="aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
