--- a/360_pano.html
+++ b/360_pano.html
@@ -11,7 +11,8 @@
         <a-camera position="0 0 0">
             <a-cursor color="#0000ff">
         </a-camera>
-        <a-sky src="PANO_20131018_125514.jpg" rotation="0 -90 0"></a-sky>
+        <!-- Demo photo https://www.flickr.com/photos/rueike/13979086743 (c) by Rick (瑞克) -->
+        <a-sky src="berlin.jpg" rotation="0 0 0"></a-sky>
     </a-scene>
   </body>
 </html>
