Renamed files and tweaked some settings

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <body style="margin: 50px;">
         <a href="webvr-tests/vrdevice/">VRDevice - plain</a><br/>
         <a href="webvr-tests/positionsensorvrdevice/">Sensors - plain</a><br/>
-        <a href="basic_box.html">Basic Box - aframe</a><br/>
-        <a href="animated_box.html">Basic Box - Animated - aframe</a><br/>
-        <a href="events_nonjs.html">Basic Box - with mouse events - aframe</a><br/>
-        <a href="events_js.html">Basic Box - mouse events via JS - aframe</a><br/>
-        <a href="360_pano.html">360 Panorama - aframe</a><br/>
-        <a href="model.html">Load an show a model - aframe</a><br/>
-        <a href="complex_animation.html">Advanced - aframe</a><br/>
+        <a href="001_basic_box.html">Basic Box - aframe</a><br/>
+        <a href="002_animated_box.html">Basic Box - Animated - aframe</a><br/>
+        <a href="003_events_nonjs.html">Basic Box - with mouse events - aframe</a><br/>
+        <a href="004_events_js.html">Basic Box - mouse events via JS - aframe</a><br/>
+        <a href="005_360_pano.html">360 Panorama - aframe</a><br/>
+        <a href="006_model.html">Load an show a model - aframe</a><br/>
+        <a href="007_complex_animation.html">Advanced - aframe</a><br/>
+        <a href="008_instructions.html">Basic Use Case</a><br/>
     </body>
 </html>
