updated for Codetalks

--- a/008_instructions.html
+++ b/008_instructions.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <title>Hello, World! • A-Frame</title>
     <meta name="description" content="Your car!">
-    <script src="aframe.min.js"></script>
+    <script src="aframe-v0.7.0.min.js"></script>
+    <script src="aframe-look-at-component.min.js"></script>
   </head>
   <body>
     <a-scene>
-        <a-assets>
-             <img id="speed_info" src="assets/speed.png">
-             <img id="rpm_info" src="assets/rpm.png">
-             <img id="navi_info" src="assets/navi.png">
-             <img id="seat_info" src="assets/seat.png">
-        </a-assets>
         <a-entity id="rpm"
-                  geometry="primitive: box"
-                  material="src: #rpm_info"
+                  geometry="primitive: plane"
+                  material="color: white"
+                  text="value: 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero facilis sunt dolorem autem ex omnis tempora, 
+                        ducimus corrupti earum dolores consequatur minima quas iure, perspiciatis. Hic vel adipisci, similique mollitia!; 
+                        color: black;
+                        align: center"
                   position="1 1 -5"
                   scale="0.25 0.25 0.25"
                   look-at="[camera]">
@@ -34,8 +34,12 @@
         </a-entity>
 
         <a-entity id="speed"
-                  geometry="primitive: plane"
-                  material="src: #speed_info"
+                  geometry="primitive: plane;"
+                  material="color: white"
+                  text="value: 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero facilis sunt dolorem autem ex omnis tempora, 
+                        ducimus corrupti earum dolores consequatur minima quas iure, perspiciatis. Hic vel adipisci, similique mollitia!; 
+                        color: black"
                   position="-0.75 1 -5"
                   scale="0.25 0.25 0.25"
                   look-at="[camera]">
@@ -52,8 +56,12 @@
         </a-entity>
 
         <a-entity id="navi"
-                  geometry="primitive: plane"
-                  material="src: #navi_info"
+                  geometry="primitive: plane;"
+                  material="color: white"
+                  text="value: 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero facilis sunt dolorem autem ex omnis tempora, 
+                        ducimus corrupti earum dolores consequatur minima quas iure, perspiciatis. Hic vel adipisci, similique mollitia!; 
+                        color: black"
                   position="4 0.75 -5"
                   scale="0.2 0.2 0.2"
                   look-at="[camera]">
@@ -71,7 +79,11 @@
 
         <a-entity id="seat"
                   geometry="primitive: plane"
-                  material="src: #seat_info"
+                  material="color: white"
+                  text="value: 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero facilis sunt dolorem autem ex omnis tempora, 
+                        ducimus corrupti earum dolores consequatur minima quas iure, perspiciatis. Hic vel adipisci, similique mollitia!; 
+                        color: black"
                   position="-3 -0.25 -5"
                   scale="0.25 0.25 0.25"
                   look-at="[camera]">
@@ -87,14 +99,15 @@
                   </a-animation>
         </a-entity>
 
-        <a-camera position="0 0 0">
-            <a-entity position="0 0 -1"
-                      geometry="primitive: ring; radiusOuter: 0.01; radiusInner: 0.001;"
-                      material="color: cyan; shader: flat"
-                      cursor="maxDistance: 30">
-
-            </a-entity>
-        </a-camera>
+        <a-entity position="0 0 0" camera>
+            <a-camera>
+                <a-entity position="0 0 -1"
+                        geometry="primitive: ring; radiusOuter: 0.01; radiusInner: 0.001;"
+                        material="color: cyan; shader: flat"
+                        cursor="maxDistance: 30">
+                </a-entity>
+            </a-camera>
+        </a-entity>
 
         <a-sky src="assets/car_3.jpg" rotation="0 -90 0"></a-sky>
     </a-scene>
