--- a/001_basic_box.html
+++ b/001_basic_box.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hello, World!</title>
-    <script src="aframe.min.js"></script>
+    <script src="aframe-v0.7.0.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -12,8 +12,8 @@
                width="1"
                height="1"
                depth="1"
-               position="1 1 1"
-               rotation="0 0 0"
+               position="0 1 -2"
+               rotation="0 -45 0"
                scale="1 1 1">
         </a-box>
         <a-sky color="#bbb"></a-sky>
