--- a/006_model.html
+++ b/006_model.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hello, World! • A-Frame</title>
     <meta name="description" content="Hello, World! • A-Frame">
-    <script src="aframe.min.js"></script>
+    <script src="aframe-v0.7.0.min.js"></script>
   </head>
   <body>
     <a-scene>
