--- a/007_complex_animation.html
+++ b/007_complex_animation.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
     <title>Hello, World!</title>
-    <script src="aframe.min.js"></script>
+    <script src="aframe-v0.7.0.min.js"></script>
   </head>
   <body>
       <a-scene>
